[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atelier-d3-client"
version = "25.1"
authors = [
  { name="ikmalsaid", email="ikmalsaid@gmail.com" },
]
description = "A fast translation layer of D3-based AI image generation."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
  "colorpaws",
  "requests",
  "pillow",
  "selenium",
  "webdriver-manager"
]
keywords = [
  "atelier-d3-client",
  "atelier_d3_client"
]

[project.urls]
Homepage = "https://github.com/ikmalsaid/atelier-d3-client"
Issues = "https://github.com/ikmalsaid/atelier-d3-client/issues"